Add web version

--- a/docs/style.css
+++ b/docs/style.css
@@ -408,7 +408,7 @@ section {
 	text-decoration: none;
 	color: white;
 	background: url(img/apple.png) no-repeat 20px center #0081EE;
-	background: url(img/apple.png) no-repeat 20px center #888;
+	background: url(img/phone.png) no-repeat 20px center #888;
 	width: 200px;
 	height: 60px;
 	/*padding-top: 12px;*/
